src/features/Components/Dashboard/ProtocolTable.scss
#protocol-table {
  .table-selection {
    width: 50%;
    float: left;
  }

  a:-webkit-any-link {
    text-decoration: none;
  }
  [class^="MuiTableCell-root-"]:last-child {
    max-width: 60px;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
    padding: 0;
  }

  .long-text {
    max-width: 100px;
 overflow: hidden;
 text-overflow: ellipsis;
 white-space: nowrap;
  }
  // [class^="MuiTableRow-root-"] {
  //   background-color: #f6f7fb;
  // }
  [class^="InternalTableBody-expandedRowEditMode-"] {
    background-color: white;
  }
  .dashboard-search-parent {
    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
    padding: 15px;
  }

  .fw-8 {
    font-weight: 800;
  }

  .extended-data {
    margin-left: 32;
    width: 20%;
  }

  .expanded-comp {
    display: flex;
    padding: 8px 0px 8px 22%;
    background-color: white;
    // margin-left: 3%;
    
    text-transform: capitalize;
  }
}

.dashboard-search-parent {
  .search-list-ul {
    list-style-type: none;
    padding: 0;
    max-height: 9em;
  }

  .search-list-ul-scroll {
    list-style-type: none;
    padding: 0;
    overflow-y: auto;
    max-height: 9em;
  }

  .search-list-li {
    padding-bottom: 10px;
  }
  .search-list-li > a {
    text-decoration: none;
  }
  .view-more-icon {
    font-size: 19.22px !important;
    margin-left: 14px;
  }
}

